src/test/deca/context/valid/affectation_of_this.deca
/*
    Description : Affectation de this à une variable de même classe que this

    Résultat: OK
*/
class B{
    B p = this;
}
