src/test/deca/context/invalid/2_var_with_same_name.deca
/*
    Description : 2 variables dans le main de même nom

    Résultat : Erreur contextuelle
*/
{
  int x;
  int x;

}
